[gd_scene load_steps=5 format=3 uid="uid://bne3e0t0rrrbn"]

[ext_resource type="Script" path="res://maze/maze2d/maze2d.gd" id="1_k416j"]
[ext_resource type="Script" path="res://maze/maze2d/camera.gd" id="2_cfn4n"]
[ext_resource type="Script" path="res://maze/maze2d/geometry.gd" id="3_nj188"]
[ext_resource type="Script" path="res://maze/maze2d/move.gd" id="4_1alv8"]

[node name="Maze2D" type="Node2D"]
process_mode = 1
script = ExtResource("1_k416j")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.15, 0.15)
limit_left = 0
limit_top = 0
position_smoothing_enabled = true
script = ExtResource("2_cfn4n")

[node name="Geometry" type="Node2D" parent="."]
script = ExtResource("3_nj188")

[node name="StartPoint" type="Line2D" parent="Geometry"]
points = PackedVector2Array(-1, -1, 1, -1, 1, 1, -1, 1)
closed = true
width = 0.5
default_color = Color(0.63946, 0.744991, 0.549096, 1)

[node name="Player" type="Line2D" parent="."]
z_index = 1
points = PackedVector2Array(0, 1, 1, 1, 1, 0, 1, 2, 1, 1, 2, 1)
width = 1.0
default_color = Color(0.533455, 0.753292, 0.815824, 1)
script = ExtResource("4_1alv8")

[node name="ExploredLine" type="Line2D" parent="Player"]
top_level = true
width = 1.5
default_color = Color(0.368627, 0.505882, 0.67451, 0.25098)
texture_mode = 2
begin_cap_mode = 1

[node name="FinalLine" type="Line2D" parent="Player"]
top_level = true
width = 1.5
default_color = Color(0.368338, 0.506096, 0.674632, 1)
begin_cap_mode = 1
end_cap_mode = 1
sharp_limit = 100.0
round_precision = 1
antialiased = true

[node name="RemoteCamera" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[connection signal="maze_end" from="Player" to="." method="_on_player_maze_end"]
